@@ -19,17 +19,20 @@
 package groovy.lang;
 
 import groovy.util.GroovyTestCase;
+import org.codehaus.groovy.runtime.DefaultGroovyMethods;
 
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 
 import static groovy.lang.Tuple.tuple;
+import static org.junit.Assert.assertNotEquals;
 
 public class TupleTest extends GroovyTestCase {
 
-    final Object[] data = {"a", "b", "c"};
-    final Tuple t = new Tuple(data);
+    private final Object[] data = {"a", "b", "c"};
+    final Tuple t = new Tuple<>(data);
 
     public void testSize() {
         assertEquals("Size of " + t, 3, t.size());
@@ -40,13 +43,13 @@ public class TupleTest extends GroovyTestCase {
 
     public void testGetOutOfTuple() {
         try {
-            t.get(-1);
+            System.out.println(t.get(-1));
             fail("Should have thrown IndexOut");
         } catch (IndexOutOfBoundsException e) {
             // worked
         }
         try {
-            t.get(10);
+            System.out.println(t.get(10));
             fail("Should have thrown IndexOut");
         } catch (IndexOutOfBoundsException e) {
             // worked
@@ -69,45 +72,50 @@ public class TupleTest extends GroovyTestCase {
 
     public void testSubTuple() {
         Tuple s = t.subTuple(1, 2);
-
-        assertTrue("is a Tuple", s instanceof Tuple);
-
+        assertTrue("is a Tuple", isTuple(s));
         assertEquals("size", 1, s.size());
     }
 
+    private boolean isTuple(Object s) {
+        return s instanceof Tuple;
+    }
+
     public void testHashCodeAndEquals() {
-        Tuple a = new Tuple(new Object[]{"a", "b", "c"});
-        Tuple b = new Tuple(new Object[]{"a", "b", "c"});
-        Tuple c = new Tuple(new Object[]{"d", "b", "c"});
-        Tuple d = new Tuple(new Object[]{"a", "b"});
-        Tuple2<String, String> e = new Tuple2<String, String>("a", "b");
-        Tuple2<String, String> f = new Tuple2<String, String>("a", "c");
+        Tuple a = new Tuple<Object>("a", "b", "c");
+        Tuple b = new Tuple<Object>("a", "b", "c");
+        Tuple c = new Tuple<Object>("d", "b", "c");
+        Tuple d = new Tuple<Object>("a", "b");
+        Tuple2<String, String> e = new Tuple2<>("a", "b");
+        Tuple2<String, String> f = new Tuple2<>("a", "c");
 
         assertEquals("hashcode", a.hashCode(), b.hashCode());
         assertTrue("hashcode", a.hashCode() != c.hashCode());
 
         assertEquals("a and b", a, b);
-        assertFalse("a != c", a.equals(c));
+        assertNotEquals("a != c", a, c);
 
-        assertFalse("!a.equals(null)", a.equals(null));
+        assertNotEquals("!a.equals(null)", null, a);
 
-        assertTrue("d.equals(e)", d.equals(e));
-        assertTrue("e.equals(d)", e.equals(d));
-        assertFalse("!e.equals(f)", e.equals(f));
-        assertFalse("!f.equals(e)", f.equals(e));
+        assertEquals("d.equals(e)", d, e);
+        assertEquals("e.equals(d)", e, d);
+        assertNotEquals("!e.equals(f)", e, f);
+        assertNotEquals("!f.equals(e)", f, e);
     }
 
     public void testIterator() {
+        final Tuple<Object> t = new Tuple<>(1, 2, 3);
+        assertEquals(6, DefaultGroovyMethods.sum(t.iterator()));
+        final Tuple3<Integer, Integer, Integer> t3 = new Tuple3<>(1, 2, 3);
+        Iterator iterator = t3.iterator();
+        assertEquals(6, DefaultGroovyMethods.sum(iterator));
     }
 
     public void testTuple1() {
         Tuple1<Integer> t = new Tuple1<>(1);
 
         assertEquals(1, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -115,13 +123,10 @@ public class TupleTest extends GroovyTestCase {
         Tuple2<Integer, Integer> t = new Tuple2<>(1, 2);
 
         assertEquals(2, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -129,16 +134,12 @@ public class TupleTest extends GroovyTestCase {
         Tuple3<Integer, Integer, Integer> t = new Tuple3<>(1, 2, 3);
 
         assertEquals(3, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
-        assertEquals(new Integer(3), t.getThird());
+        assertEquals(Integer.valueOf(3), t.getV3());
         assertEquals(3, t.get(2));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -146,19 +147,14 @@ public class TupleTest extends GroovyTestCase {
         Tuple4<Integer, Integer, Integer, Integer> t = new Tuple4<>(1, 2, 3, 4);
 
         assertEquals(4, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
-        assertEquals(new Integer(3), t.getThird());
+        assertEquals(Integer.valueOf(3), t.getV3());
         assertEquals(3, t.get(2));
-
-        assertEquals(new Integer(4), t.getFourth());
+        assertEquals(Integer.valueOf(4), t.getV4());
         assertEquals(4, t.get(3));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -166,22 +162,16 @@ public class TupleTest extends GroovyTestCase {
         Tuple5<Integer, Integer, Integer, Integer, Integer> t = new Tuple5<>(1, 2, 3, 4, 5);
 
         assertEquals(5, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
-        assertEquals(new Integer(3), t.getThird());
+        assertEquals(Integer.valueOf(3), t.getV3());
         assertEquals(3, t.get(2));
-
-        assertEquals(new Integer(4), t.getFourth());
+        assertEquals(Integer.valueOf(4), t.getV4());
         assertEquals(4, t.get(3));
-
-        assertEquals(new Integer(5), t.getFifth());
+        assertEquals(Integer.valueOf(5), t.getV5());
         assertEquals(5, t.get(4));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -189,25 +179,18 @@ public class TupleTest extends GroovyTestCase {
         Tuple6<Integer, Integer, Integer, Integer, Integer, Integer> t = new Tuple6<>(1, 2, 3, 4, 5, 6);
 
         assertEquals(6, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
-        assertEquals(new Integer(3), t.getThird());
+        assertEquals(Integer.valueOf(3), t.getV3());
         assertEquals(3, t.get(2));
-
-        assertEquals(new Integer(4), t.getFourth());
+        assertEquals(Integer.valueOf(4), t.getV4());
         assertEquals(4, t.get(3));
-
-        assertEquals(new Integer(5), t.getFifth());
+        assertEquals(Integer.valueOf(5), t.getV5());
         assertEquals(5, t.get(4));
-
-        assertEquals(new Integer(6), t.getSixth());
+        assertEquals(Integer.valueOf(6), t.getV6());
         assertEquals(6, t.get(5));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -215,28 +198,20 @@ public class TupleTest extends GroovyTestCase {
         Tuple7<Integer, Integer, Integer, Integer, Integer, Integer, Integer> t = new Tuple7<>(1, 2, 3, 4, 5, 6, 7);
 
         assertEquals(7, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
-        assertEquals(new Integer(3), t.getThird());
+        assertEquals(Integer.valueOf(3), t.getV3());
         assertEquals(3, t.get(2));
-
-        assertEquals(new Integer(4), t.getFourth());
+        assertEquals(Integer.valueOf(4), t.getV4());
         assertEquals(4, t.get(3));
-
-        assertEquals(new Integer(5), t.getFifth());
+        assertEquals(Integer.valueOf(5), t.getV5());
         assertEquals(5, t.get(4));
-
-        assertEquals(new Integer(6), t.getSixth());
+        assertEquals(Integer.valueOf(6), t.getV6());
         assertEquals(6, t.get(5));
-
-        assertEquals(new Integer(7), t.getSeventh());
+        assertEquals(Integer.valueOf(7), t.getV7());
         assertEquals(7, t.get(6));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -244,31 +219,22 @@ public class TupleTest extends GroovyTestCase {
         Tuple8<Integer, Integer, Integer, Integer, Integer, Integer, Integer, Integer> t = new Tuple8<>(1, 2, 3, 4, 5, 6, 7, 8);
 
         assertEquals(8, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
-        assertEquals(new Integer(3), t.getThird());
+        assertEquals(Integer.valueOf(3), t.getV3());
         assertEquals(3, t.get(2));
-
-        assertEquals(new Integer(4), t.getFourth());
+        assertEquals(Integer.valueOf(4), t.getV4());
         assertEquals(4, t.get(3));
-
-        assertEquals(new Integer(5), t.getFifth());
+        assertEquals(Integer.valueOf(5), t.getV5());
         assertEquals(5, t.get(4));
-
-        assertEquals(new Integer(6), t.getSixth());
+        assertEquals(Integer.valueOf(6), t.getV6());
         assertEquals(6, t.get(5));
-
-        assertEquals(new Integer(7), t.getSeventh());
+        assertEquals(Integer.valueOf(7), t.getV7());
         assertEquals(7, t.get(6));
-
-        assertEquals(new Integer(8), t.getEighth());
+        assertEquals(Integer.valueOf(8), t.getV8());
         assertEquals(8, t.get(7));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -276,34 +242,24 @@ public class TupleTest extends GroovyTestCase {
         Tuple9<Integer, Integer, Integer, Integer, Integer, Integer, Integer, Integer, Integer> t = new Tuple9<>(1, 2, 3, 4, 5, 6, 7, 8, 9);
 
         assertEquals(9, t.size());
-
-        assertEquals(new Integer(1), t.getFirst());
+        assertEquals(Integer.valueOf(1), t.getV1());
         assertEquals(1, t.get(0));
-
-        assertEquals(new Integer(2), t.getSecond());
+        assertEquals(Integer.valueOf(2), t.getV2());
         assertEquals(2, t.get(1));
-
-        assertEquals(new Integer(3), t.getThird());
+        assertEquals(Integer.valueOf(3), t.getV3());
         assertEquals(3, t.get(2));
-
-        assertEquals(new Integer(4), t.getFourth());
+        assertEquals(Integer.valueOf(4), t.getV4());
         assertEquals(4, t.get(3));
-
-        assertEquals(new Integer(5), t.getFifth());
+        assertEquals(Integer.valueOf(5), t.getV5());
         assertEquals(5, t.get(4));
-
-        assertEquals(new Integer(6), t.getSixth());
+        assertEquals(Integer.valueOf(6), t.getV6());
         assertEquals(6, t.get(5));
-
-        assertEquals(new Integer(7), t.getSeventh());
+        assertEquals(Integer.valueOf(7), t.getV7());
         assertEquals(7, t.get(6));
-
-        assertEquals(new Integer(8), t.getEighth());
+        assertEquals(Integer.valueOf(8), t.getV8());
         assertEquals(8, t.get(7));
-
-        assertEquals(new Integer(9), t.getNinth());
+        assertEquals(Integer.valueOf(9), t.getV9());
         assertEquals(9, t.get(8));
-
         assertEquals(t, t.subTuple(0, t.size()));
     }
 
@@ -325,16 +281,16 @@ public class TupleTest extends GroovyTestCase {
     }
 
     public void testEqualsNull() {
-        assertFalse(tuple(1).equals(null));
-        assertFalse(tuple(1, 2).equals(null));
-        assertFalse(tuple(1, 2, 3).equals(null));
+        assertNotEquals(null, tuple(1));
+        assertNotEquals(null, tuple(1, 2));
+        assertNotEquals(null, tuple(1, 2, 3));
     }
 
     public void testGroovyStyleAccessor() {
         try {
             assertScript("def t = new Tuple1<String>('Daniel'); assert 'Daniel' == t.v1");
         } catch (Exception e) {
-            assert false: e.getMessage();
+            assert false : e.getMessage();
         }
     }
 }
